# moonshine_cpp

./: CMakeLists.txt  README.md
cmake/: FetchAudioFile.cmake  FetchPrebuiltONNXRuntime.cmake  FetchTokenizers.cmake  moonshine_cpp-config.cmake.in
example/: CMakeLists.txt  main.cpp
include/: moonshine.h  moonshine_onnx_model.h
src/: CMakeLists.txt  moonshine_onnx_model.cpp  moonshine_transcribe.cpp
